# rotmgGame

./: .gitignore  .gitmodules  Beholder.cpp  Beholder.h  BeholderBullet.cpp  BeholderBullet.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Game.cpp  Game.h  HealthBar.cpp  HealthBar.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  Text.cpp  Text.h  Window.cpp  Window.h  assets.cpp  assets.h  main.cpp
assets/: playerData.txt
